{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "GameActionMap",
            "id": "a966fd0f-9bea-4ebc-9f9c-0f55e6ee3fae",
            "actions": [
                {
                    "name": "LaneChangeSwipe",
                    "type": "Value",
                    "id": "d0a43523-6986-45a8-a66a-e3f615c6907e",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LaneChangeTap",
                    "type": "Button",
                    "id": "bb3acac4-bcf0-40ee-81df-27d94282eaeb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "22037386-b8cb-409a-ac83-c0c045211209",
                    "path": "<Touchscreen>/primaryTouch/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LaneChangeSwipe",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9d232aa6-edff-4de9-a0a3-4ca587638cb9",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LaneChangeTap",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Touch",
            "id": "502d1fbc-2cfd-4104-bd28-058731bb3893",
            "actions": [
                {
                    "name": "TouchPosition",
                    "type": "Value",
                    "id": "feca1d19-c232-44dc-8ed6-067761e6f2e8",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TouchContact",
                    "type": "Button",
                    "id": "9eec1c6a-7278-424d-99a4-a80eb601756e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchDelta",
                    "type": "Value",
                    "id": "de45350a-44b9-467c-a7eb-707f7a974e8c",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "25b4f45c-b23c-4997-b1f4-25154f70aab9",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchContact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "87718179-deae-4e54-bb3a-886b38e33b65",
                    "path": "<Touchscreen>/primaryTouch/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchDelta",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a4d09094-3ab5-4d66-9b78-3f9f8c478fff",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}